<resources>
    <string name="app_name">FitApp</string>
    <string name="welcomecreen_welcome">Добро пожаловать</string>
    <string name="welcomescreen_text"></string>
    <string name="main_header">Позаботьтесь о своем теле</string>
    <string name="main_text">Не забывайте пить воду</string>
    <string name="icon_calculator_text">Начать</string>
    <string name="icon_weights_text">Практика</string>
    <string name="icon_run_text">Помощь</string>
    <string name="icon_water_text"></string>
    <string name="button_start">НАЧАТЬ</string>
    <string name="button_stop">ЗАКОНЧИТЬ</string>
    <string name="button_pause">ПАУЗА</string>
    <string name="button_resume">ПРОДОЛЖИТЬ</string>
    //exercises
    <string name="exercises_header">Просмотр упражнений</string>
    <string name="exercises_text">Список доступных упражнений</string>
    // work
    <string name="work_timer_set">00:00</string>
    // transition
    <string name="transition_first">Начните тренировку</string>
    <string name="transition_second">Нажмите, чтобы продолжить</string>
    <string name="practice_short">КОРОТКАЯ</string>
    <string name="practice_medium">СРЕДНЯЯ</string>
    <string name="practice_long">ДЛИННАЯ</string>
    // help
    <string name="help_header">О приложении</string>
    <string name="help_sub_header">Как пользоваться приложением</string>
    <string name="help_text"><b>Для чего это приложение?</b>\nПриложение FitApp предназначено для людей, кто работает дома и ведет сидячий образ жизни. Благодаря приложению, пользователь может отслеживать время работы и делать перерывы, согласно рекомендованному врачами графику: раз в 60 минут.\nВо время перерыва пользователь сможет уделить от 5 до 10 минут на несложную физическую активность, чем поможет себе и своему телу.
        \n\n<b>Главный экран</b>\nНа главном экране расположены четыре кнопки, с которыми можно взаимодействовать: "Начать", "Практика", "Вода", "Помощь".\n\n<b>"Начать"</b>\nПо нажатию открывается таймер длительностью в 60 минут. По нажатию на "НАЧАТЬ" запускается отсчёт времени - можно заниматься работой. Не бойтесь выходить из приложения: таймер будет отсчитывать время даже в выключенном состоянии. \nНа экране также находятся кнопки Помощь и Вода. \nЧерез час приложение уведомит вас о начале перерыва. На выбор будет предложено три тренировки: короткая(на 5 минут), средняя(на 10 минут), длинная(15 минут). Выберите одну из них и выполните все упражнения при помощи того же таймера. По окончанию вы перейдете на основной таймер - и снова за работу.\n
\n<b>Практика</b>\nЗдесь представлены все упражнения, которые представлены в практиках. Нажмите на крестик для выхода.\n
\n<b>Вода</b>\nБутылка с водой - счетчик выпитой воды. Нажимайте на плюс после каждого выпитого стакана, и нажмите на минус, если ошиблись. Счетчик обновляется раз в сутки.\n
\n<b>Помощь</b>\nЗдесь представлена информация о работе с приложением. Для выхода нажмите на крестик.</string>
</resources>