<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:id="@+id/fragment_container">

    <View
        android:id="@+id/v_transition_bgapp"
        android:layout_width="500dp"
        android:layout_height="1024dp"
        android:background="@drawable/ic_gradient_green_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/ll_transition_textsplash"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_transition_first"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/transition_first"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_transition_second"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.8"
            android:gravity="center"
            android:text="@string/transition_second"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_transition_practices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/ll_transition_textsplash"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/b_transition_short"
            android:layout_width="275dp"
            android:layout_height="60dp"
            android:background="@drawable/button_white_one"
            android:text="@string/practice_short"
            android:layout_marginBottom="80dp"
            android:textSize="18sp" />

        <Button
            android:id="@+id/b_transition_medium"
            android:layout_width="275dp"
            android:layout_height="60dp"
            android:background="@drawable/button_white_one"
            android:text="@string/practice_medium"
            android:layout_marginBottom="80dp"
            android:textSize="18sp" />

        <Button
            android:id="@+id/b_transition_long"
            android:layout_width="275dp"
            android:layout_height="60dp"
            android:background="@drawable/button_white_one"
            android:text="@string/practice_long"
            android:textSize="18sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>