<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:id="@+id/fragment_container">

    <View
        android:id="@+id/v_work_timer_background"
        android:layout_width="500dp"
        android:layout_height="1024dp"
        android:background="@drawable/ic_blue_background"
        android:translationY="-140dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_work_circle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:src="@drawable/ic_blue_circle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_work_time_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/work_timer_set"
        android:textColor="@color/white"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_work_circle"
        app:layout_constraintEnd_toEndOf="@+id/iv_work_circle"
        app:layout_constraintStart_toStartOf="@+id/iv_work_circle"
        app:layout_constraintTop_toTopOf="@+id/iv_work_circle" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="402dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        android:paddingRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_work_circle">

        <Button
            android:id="@+id/b_work_left"
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginEnd="60dp"
            android:layout_marginRight="60dp"
            android:background="@drawable/button_white_one"
            android:text="@string/button_start"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/b_work_right"
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/button_white_one"
            android:text="@string/button_stop"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">
        <fragment
            android:id="@+id/frg_water_bottle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:name="com.example.fitapp.Model.WaterBottleFragment"
            tools:layout="@layout/fragment_water_bottle"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>